syntax = "proto3";
option java_multiple_files = true;
package HeartMeasurement;
option java_outer_classname = "HeartMeasureImpl";
//import "Patient.proto";


message HeartMeasurementResponse {
 	enum Status {
 		FAILURE = 0;
 		SUCCESSFUL =1;
 	}
 Status status = 3;
 int32 bpm = 4;
 }

 message Patient{
 	int32 id = 1;
 	string name = 2;
 	int32 riskLevel = 3;
 	int32 bpm = 4;
 }

 message HeartMeasurementRequest{
 	repeated Patient patient =1 ;

 }
service HeartMeasurement{
rpc RecordHeartMeasurement(HeartMeasurementRequest) returns (HeartMeasurementResponse);
}

