syntax = "proto3";
option java_multiple_files = true;
package RecordingService;
option java_outer_classname = "RecordServiceImpl";
//import "Patient.proto";

message MedicalRecordResponse {
 	enum Status {
 		FAILURE = 0;
 		SUCCESSFUL =1;
 	}
 Status status = 3;
 repeated MedicalRecord medicalRecords = 4;//list medical records
 }
  message MedicalRecord{
 	int32 id = 1;
 	string name = 2;
 	string DoctorName = 3;
 }
 message Patient{
 	int32 id = 1;
 	string name = 2;
 	int32 riskLevel = 3;
 	int32 bpm=4;
 }

 message PatientRecordsRequest{
 	int32 id=1;
 }
 message PatientRecordsResponse{
 	int32 riskLevel=2;
 }

 message MedicalRecordRequest{
 	repeated Patient patient =1 ;//take risk level from patient

 }
 message SetPatientBpmRequest{
 	int32 bpm=1;
 	int32 id=2;
 }
 message PatientResponse{
 	Patient patient=2;
 }
service RecordingService{
rpc getMedicalRecords(MedicalRecordRequest) returns (stream MedicalRecordResponse);//Client side streaming

rpc getPatientRecords( PatientRecordsRequest ) returns (stream PatientRecordsResponse);

rpc setBpm(SetPatientBpmRequest) returns (PatientResponse);//bpm and id from client side
}



